--- a/index.html
+++ b/index.html
@@ -5,19 +5,29 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SmartStart Tech Camp 2025</title>
+  <!-- Подключаем сброс стилей -->
   <link rel="stylesheet" href="css/reset.css">
+  <!-- Подключаем Google Font Poppins -->
+  <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
+  <!-- Основные стили -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="header">
     <nav class="nav container">
       <a href="#" class="nav__logo">SmartStart</a>
-      <button class="nav__toggle" aria-label="Открыть меню">☰</button>
+
+      <!-- Чекбокс-хак для бургер-меню -->
+      <input type="checkbox" id="nav-toggle" class="nav__checkbox">
+      <label for="nav-toggle" class="nav__button">
+        <span class="nav__icon">&nbsp;</span>
+      </label>
+
       <ul class="nav__list">
-        <li><a href="#about">О&nbsp;мероприятии</a></li>
+        <li><a href="#about">О мероприятии</a></li>
         <li><a href="#schedule">Программа</a></li>
         <li><a href="#speakers">Спикеры</a></li>
-        <li><a href="#register">Регистрация</a></li>
+        <li><a href="#register" class="btn btn--secondary">Регистрация</a></li>
       </ul>
     </nav>
   </header>
@@ -45,44 +55,4 @@
         </div>
         <div class="schedule__item">
           <time>11:00</time>
-          <p>HTML & CSS: основы верстки</p>
-        </div>
-        <!-- …еще блоки… -->
-      </div>
-    </section>
-
-    <section id="speakers" class="speakers container">
-      <h2>Спикеры</h2>
-      <div class="speakers__grid">
-        <div class="speaker">
-          <img src="img/speakers/alex.jpg" alt="Алексей Иванов">
-          <h3>Алексей Иванов</h3>
-          <p>Frontend-разработчик Google</p>
-        </div>
-        <!-- …еще спикеры… -->
-      </div>
-    </section>
-
-    <section id="register" class="register container">
-      <h2>Регистрация</h2>
-      <form class="form">
-        <div class="form__group">
-          <label for="name">Имя</label>
-          <input type="text" id="name" name="name" required placeholder="Ваше имя">
-        </div>
-        <div class="form__group">
-          <label for="email">Email</label>
-          <input type="email" id="email" name="email" required placeholder="example@mail.com">
-        </div>
-        <button type="submit" class="btn btn--primary">Отправить</button>
-      </form>
-    </section>
-  </main>
-
-  <footer class="footer">
-    <div class="container">
-      <p>© 2025 SmartStart Tech Camp. Все права защищены.</p>
-    </div>
-  </footer>
-</body>
-</html>
+          <p
