--- a/index.html
+++ b/index.html
@@ -55,4 +55,55 @@
         </div>
         <div class="schedule__item">
           <time>11:00</time>
-          <p
+          <p>HTML & CSS: основы верстки</p>
+        </div>
+        <div class="schedule__item">
+          <time>13:00</time>
+          <p>Обед и свободное общение</p>
+        </div>
+        <div class="schedule__item">
+          <time>14:00</time>
+          <p>Flexbox, Grid и адаптивность</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="speakers" class="speakers container">
+      <h2>Спикеры</h2>
+      <div class="speakers__grid">
+        <div class="speaker">
+          <img src="img/speakers/alex.jpg" alt="Алексей Иванов">
+          <h3>Алексей Иванов</h3>
+          <p>Frontend-разработчик Google</p>
+        </div>
+        <div class="speaker">
+          <img src="img/speakers/olga.jpg" alt="Ольга Смирнова">
+          <h3>Ольга Смирнова</h3>
+          <p>UX/UI-дизайнер</p>
+        </div>
+      </div>
+    </section>
+
+    <section id="register" class="register container">
+      <h2>Регистрация</h2>
+      <form class="form">
+        <div class="form__group">
+          <label for="name">Имя</label>
+          <input type="text" id="name" name="name" required placeholder="Ваше имя">
+        </div>
+        <div class="form__group">
+          <label for="email">Email</label>
+          <input type="email" id="email" name="email" required placeholder="example@mail.com">
+        </div>
+        <button type="submit" class="btn btn--primary">Отправить</button>
+      </form>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="container">
+      <p>© 2025 SmartStart Tech Camp. Все права защищены.</p>
+    </div>
+  </footer>
+</body>
+</html>
