--- a/index.html
+++ b/index.html
@@ -1,33 +1,26 @@
-<!-- index.html -->
 <!DOCTYPE html>
 <html lang="ru">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>SmartStart Tech Camp 2025</title>
-  <!-- Подключаем сброс стилей -->
   <link rel="stylesheet" href="css/reset.css">
-  <!-- Подключаем Google Font Poppins -->
   <link href="https://fonts.googleapis.com/css2?family=Poppins:wght@300;400;600;800&display=swap" rel="stylesheet">
-  <!-- Основные стили -->
   <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
   <header class="header">
     <nav class="nav container">
       <a href="#" class="nav__logo">SmartStart</a>
-
-      <!-- Чекбокс-хак для бургер-меню -->
       <input type="checkbox" id="nav-toggle" class="nav__checkbox">
       <label for="nav-toggle" class="nav__button">
-        <span class="nav__icon">&nbsp;</span>
+        <span class="nav__icon"></span>
       </label>
-
       <ul class="nav__list">
         <li><a href="#about">О мероприятии</a></li>
         <li><a href="#schedule">Программа</a></li>
         <li><a href="#speakers">Спикеры</a></li>
-        <li><a href="#register" class="btn btn--secondary">Регистрация</a></li>
+        <li><a href="#register">Регистрация</a></li>
       </ul>
     </nav>
   </header>
@@ -36,14 +29,18 @@
     <section id="hero" class="hero">
       <div class="hero__content container">
         <h1 class="hero__title">SmartStart Tech Camp 2025</h1>
-        <p class="hero__subtitle">Один день — сотни идей, мастер-классы и нетворкинг для старшеклассников</p>
+        <p class="hero__subtitle">
+          Один день — сотни идей, мастер-классы и нетворкинг для старшеклассников
+        </p>
         <a href="#register" class="btn btn--primary">Зарегистрироваться</a>
       </div>
     </section>
 
     <section id="about" class="about container">
       <h2>О мероприятии</h2>
-      <p>Уникальная возможность погрузиться в web-разработку, дизайн и робототехнику под руководством экспертов индустрии.</p>
+      <p>
+        Уникальная возможность погрузиться в web-разработку, дизайн и робототехнику под руководством экспертов индустрии.
+      </p>
     </section>
 
     <section id="schedule" class="schedule container">
@@ -74,17 +71,17 @@
         <div class="speaker">
           <img src="img/speakers/alex.png" alt="Алексей Иванов">
           <h3>Алексей Иванов</h3>
-          <p>Frontend-разработчик Google</p>
+          <p>Frontend-разработчик Maximum</p>
         </div>
         <div class="speaker">
           <img src="img/speakers/olga.png" alt="Ольга Смирнова">
           <h3>Ольга Смирнова</h3>
-          <p>UX/UI-дизайнер Apple</p>
+          <p>UX/UI-дизайнер Pear</p>
         </div>
         <div class="speaker">
-          <img src="img/speakers/andrei.jpg" alt="Андрей Варкин">
+          <img src="img/speakers/andrei.png" alt="Андрей Варкин">
           <h3>Андрей Варкин</h3>
-          <p>CEO Microsoft</p>
+          <p>CEO Pear</p>
         </div>
       </div>
     </section>
